Enum "label" {
  "warning"
  "danger"
  "success"
  "info"
}

Enum "role" {
  "admin"
  "user"
}

Table "users" {
  "id" int4 [pk, not null, increment]
  "name" varchar [not null]
  "password" varchar [not null]
  "role" role [not null]
  "email" varchar [not null]
  "created_at" timestamp [not null, default: `now()`]
}

Table "test" {
  "id" int4 [pk, not null, increment]
  "title" varchar(30) [not null]
}

Table "messages" {
  "id" int4 [pk, not null, increment]
  "text" varchar [not null]
  "user_id" int4 [not null]
  "created_at" timestamp [not null, default: `now()`]
}

Table "notifications" {
  "id" int4 [pk, not null, increment]
  "title" varchar(30) [not null]
  "text" varchar(200) [not null]
  "label" label [not null]
  "receiver_id" int4 [not null]
  "created_at" timestamp [not null, default: `now()`]
}

Ref "messages_user_id_fkey":"users"."id" < "messages"."user_id"

Ref "notifications_receiver_id_fkey":"users"."id" < "notifications"."receiver_id"
